<resources>
    <string name="app_name">Health Care App</string>
    <string name="patient_number">Patient Number</string>
    <string name="registration_date">Registration Date</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="date_of_birth">DOB</string>
    <string name="gender">Gender</string>
    <string name="close">Close</string>
    <string name="save">Save</string>
    <string name="patient_registration_form">Patient registration form</string>
    <string name="input_required">input required</string>
    <string name="patient_name">Patient Name:</string>
    <string name="visit_date">Visit Date</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="bmi">BMI</string>
    <string name="in_kg">in KG</string>
    <string name="in_cm">in CM</string>
    <string name="vitals_form">Patient vitals form</string>
    <string name="general_health_question">General health?</string>
    <string name="good">Good</string>
    <string name="poor">Poor</string>
    <string name="diet_question">Have you ever been on a diet to lose weight?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="comments">Comments</string>
    <string name="visit_form_a">Patient visit form A</string>
    <string name="drugs_question">Are you currently taking any drugs?</string>
    <string name="visit_form_b">Patient visit form B</string>
    <string name="date">Date</string>
    <string name="placeholder_date">Tue, 24 Jun 2021</string>
    <string name="patient_listing">Patient Listing</string>
    <string name="select_dob">Select Date of Birth</string>
    <string name="select_reg_date">Select Registration Date</string>
    <string name="error_date_format">Invalid Date Format. Required format: dd/mm/yyyy</string>
    <string name="saving">Saving…</string>
</resources>