<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/registrationFragment">

    <fragment
        android:id="@+id/registrationFragment"
        android:name="com.android.healthcareapp.ui.RegistrationFragment"
        android:label="@string/patient_registration_form"
        tools:layout="@layout/fragment_registration" />

    <fragment
        android:id="@+id/vitalsFragment"
        android:name="com.android.healthcareapp.ui.VitalsFragment"
        android:label="@string/vitals_form"
        tools:layout="@layout/fragment_vitals" />

    <fragment
        android:id="@+id/visitFormAFragment"
        android:name="com.android.healthcareapp.ui.VisitFormAFragment"
        android:label="@string/visit_form_a"
        tools:layout="@layout/fragment_visit_form_a" />

    <fragment
        android:id="@+id/visitFormBFragment"
        android:name="com.android.healthcareapp.ui.VisitFormBFragment"
        android:label="@string/visit_form_b"
        tools:layout="@layout/fragment_visit_form_b" />
</navigation>